# nudge-r

./: PROJECT_OVERVIEW.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: global.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  db.rs  error.rs  lib.rs  log.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs  notice.rs  sql.rs
src-tauri/src/db/: sql.rs
src-tauri/src/migrations/: 20260403_init.sql
src/app/: App.module.scss  App.tsx  renderPage.tsx
src/constants/: app.ts  enum.ts  movement-themes.ts  movement.ts  session.ts  tabs.tsx  theme.ts
src/core/: invoke.ts
src/core/types/: dto.ts
src/features/movement/: MovementPanel.module.scss  MovementPanel.tsx
src/features/notification/: NotificationPage.module.scss  NotificationPage.tsx  TodoNotificationPage.tsx
src/features/reminders/: RemindersPanel.module.scss  RemindersPanel.tsx
src/features/settings/: SettingsPanel.module.scss  SettingsPanel.tsx
src/features/todo/: RichEditor.module.scss  RichEditor.tsx  TodoPanel.module.scss  TodoPanel.tsx
src/features/tray/: TrayDetailPage.module.scss  TrayDetailPage.tsx
src/layout/: SessionList.module.scss  SessionList.tsx  Sidebar.module.scss  Sidebar.tsx
src/store/: index.tsx
src/types/: global.d.ts
src/utils/: errorHandler.ts  message.ts  timer.ts
