[package]
name = "nudge-r"
version = "0.1.0"
description = "A Tauri App"
authors = ["chendf"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nudge_r_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri-plugin-notification = "2.3.3"
rand = "0.8.5"
sqlx = "0.8.6"
heck = "0.5.0"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
log = "0.4.29"
html2text = "0.17"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
